--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,12 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>Biblioteka SI</name>
   	
-  	<parent>
-    	<groupId>org.springframework.boot</groupId>
-    	<artifactId>spring-boot-starter-parent</artifactId>
-    	<version>1.5.3.RELEASE</version>
-    </parent>
+  	<parent>  
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>1.1.8.RELEASE</version>
+<destFileName>webapp-runner.jar</destFileName>
+</parent>  
 	
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -19,12 +20,13 @@
     </properties>
     
     
-	<dependencies>
+	<dependencies>  
+		    <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		    </dependency>
 	
-	    <dependency>
-	        <groupId>org.springframework.boot</groupId>
-	        <artifactId>spring-boot-starter-web</artifactId>
-	    </dependency>
+	    
 		
 		<!-- JPA Data (We are going to use Repositories, Entities, Hibernate, etc...) -->
         <dependency>
@@ -102,9 +104,9 @@
   	<build>
         <plugins>
             <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+        </plugin>
         </plugins>
     </build>
 </project>
