--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://sql11.freesqldatabase.com:3306/tim7
+spring.datasource.url=jdbc:mysql://localhost:3306/tim7
 spring.datasource.username=sql11180549
 spring.datasource.password=C9Xx35VZnP
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
